--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<h3>Customer Segmentation – Clustering Project</h3>
+											<p>This project segments mall customers into distinct groups using KMeans clustering based on age, income, and spending behavior. The goal is to help marketers identify high-value customers and design tailored targeting strategies. The analysis includes exploratory data analysis, optimal cluster selection using the elbow method, and business-driven recommendations based on cluster characteristics.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
