--- a/index.html
+++ b/index.html
@@ -103,11 +103,14 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="images/machine-learning-model-for-customer-segmentation-01-1.png"><img src="images/pic02.jpg" alt="" /></a>
 											<h3>Customer Segmentation – Clustering Project</h3>
 											<p>This project segments mall customers into distinct groups using KMeans clustering based on age, income, and spending behavior. The goal is to help marketers identify high-value customers and design tailored targeting strategies. The analysis includes exploratory data analysis, optimal cluster selection using the elbow method, and business-driven recommendations based on cluster characteristics.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://github.com/gitanv/Customer-Segmentation-Analysis.git" class="button">View Project on GitHub</a></li>
+											</ul>
+											<ul class="actions">
+												<li><a href="https://www.canva.com/design/DAGjDn4Ufuo/xMZ7j-7UoxOTKiTPQIny9Q/edit?utm_content=DAGjDn4Ufuo&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="button">View Summary Presentation</a></li>
 											</ul>
 										</article>
 										<article>
