--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="images/machine-learning-model-for-customer-segmentation-01-1.png"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src = "images/istockphoto-1425468274-612x612.jpg" alt="" /></a>
 											<h3>Customer Segmentation – Clustering Project</h3>
 											<p>This project segments mall customers into distinct groups using KMeans clustering based on age, income, and spending behavior. The goal is to help marketers identify high-value customers and design tailored targeting strategies. The analysis includes exploratory data analysis, optimal cluster selection using the elbow method, and business-driven recommendations based on cluster characteristics.</p>
 											<ul class="actions">
