--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 											<h3>British Airways- Tableau Project</h3>
 											<p>A Tableau dashboard project analyzing British Airways customer reviews from 2016 to 2023. The dashboard highlights trends in customer satisfaction across metrics like cabin service, entertainment, food, and seat comfort. It features time series analysis, aircraft-wise performance, country-level insights, and sentiment analysis using review text. This project showcases my skills in data visualization, storytelling, and interactive dashboard design.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://public.tableau.com/app/profile/anvesha.mishra8818/viz/shared/NYNBDBF5P" class="button">Click to view Dashboard</a></li>
 											</ul>
 										</article>
 										<article>
